--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,8 @@
 
 env
 log
-tmp
+tmp/*
+!tmp/.nomedia
 **/__pycache__
 BotService/mtts-weights/checkpoint_1350000.pth.tar
 BotService/mtts-weights/vctk_pretrained_model_3180.pt
